# fate

applications/fate/: CMakeLists.txt  prj.conf
applications/fate/core/src/: main.cpp
boards/fate/: Kconfig  Kconfig.esp32s3_fate  board.yml  esp32s3_fate_appcpu.dts  esp32s3_fate_appcpu.yaml  esp32s3_fate_procpu.dts  esp32s3_fate_procpu.yaml
